tests/dataset/tpc-ds/compiler/pl/q91.error
run: exit status 2
ERROR: /tmp/q91.pl:58: user:main main/0: Unknown procedure: first/2
